Prevent mobile nav from cropping

--- a/assets/css/mds/wireframe/wireframe.skeleton/wireframe.skeleton.components.layout.css
+++ b/assets/css/mds/wireframe/wireframe.skeleton/wireframe.skeleton.components.layout.css
@@ -28,7 +28,7 @@
   .h-screen-offset-header {
     height: 100%;
     height: stretch;
-    height: calc(100vh - var(--header-height));
+    height: calc(100dvh - var(--header-height));
   }
 
   /* Overlay link utility - positioning and sizing structure */
